<resources>
    <string name="app_name">LiveLive(Recorder)</string>
    <string name="endPointUrl">http://206.81.0.65:3000/</string>
    <string name="Email">Username</string>
    <string name="password">Password</string>

    <string name="Signin">Login</string>
    <string name="stream_name">Enter Stream Name</string>
    <string name="add_user">Add</string>
    <string name="enter_user_name">Enter User Name</string>
    <string name="create_user">Create User</string>
    <string name="create_stream">Create Stream</string>

    <string name="signUp">Add User</string>
    <string name="FirstName">Name</string>
    <string name="Male">Male</string>
    <string name="Female">Female</string>
    <string name="Age">Age</string>
    <string name="edit_stream">Edit Stream</string>
    <string name="stop_broadcast">Stop Broadcast</string>
    <string name="app_name_in_login">LiveLIVE Recorder</string>
    <string name="channel_name_hint">Channel Name</string>
    <string name="app_icon_desc">faded app icon a visual conetent</string>
    <string name="enter_email">Enter Email</string>

    <string name="exit_to_app">Logout</string>
    <string name="channel_name">Channel Name</string>
    <string name="take_photo">Take Photo</string>
</resources>